<resources>
    <string name="app_name">Tivi Clone</string>
    <string name="user_string">user</string>
    <string name="password_string">password</string>
    <string name="tv_login">login</string>
    <string name="valid_user_msg">Credentials valid!</string>
    <string name="invalid_user_msg">Credentials no valid</string>
    <string name="tv_register">join</string>
    <string name="repeat_password">repeat password</string>
    <string name="visit_website">trakt.tv</string>
    <string name="greeting">Hello, %s!</string>
    <string name="discover_option">Discover</string>
    <string name="library_option">Library</string>
    <string name="user_option">User</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_search">search</string>
    <string name="action_settings">settings</string>
    <string name="login_library">login to store your library</string>
    <!-- Preference Titles -->
    <string name="login_header">Autologin</string>
    <string name="sorting_header">Sorting</string>

    <!-- Login Preferences -->
    <string name="autologin_title">Remember me (autologin)</string>
    <string name="username_title">Username</string>
    <string name="password_title">Password</string>

    <!-- Sorting Preferences -->
    <string name="sorting_title">Sorting enabled</string>
    <string name="criteria_title">Sorting criteria</string>

    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>