<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/discoverFragment"
        android:enabled="true"
        android:icon="@drawable/baseline_explore_24"
        android:title="@string/discover_option"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/libraryFragment"
        android:enabled="true"
        android:icon="@drawable/baseline_video_library_24"
        android:title="@string/library_option"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/userFragment"
        android:enabled="true"
        android:icon="@drawable/baseline_person_outline_24"
        android:title="@string/user_option"
        app:showAsAction="ifRoom" />
</menu>